// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package protobuf_unittest_generated;
message GeneratedSwiftReservedFields {
  int32 adjusted = 1;
  int32 aggregateValue = 2;
  int32 allCases = 3;
  int32 allowAlias = 4;
  int32 alwaysPrintEnumsAsInts = 5;
  int32 alwaysPrintInt64sAsNumbers = 6;
  int32 annotation = 7;
  int32 any = 8;
  int32 AnyExtensionField = 9;
  int32 AnyMessageExtension = 10;
  int32 AnyMessageStorage = 11;
  int32 AnyUnpackError = 12;
  int32 Api = 13;
  int32 appended = 14;
  int32 appendUIntHex = 15;
  int32 appendUnknown = 16;
  int32 areAllInitialized = 17;
  int32 Array = 18;
  int32 arrayDepth = 19;
  int32 arrayLiteral = 20;
  int32 arraySeparator = 21;
  int32 as = 22;
  int32 asciiOpenCurlyBracket = 23;
  int32 asciiZero = 24;
  int32 available = 25;
  int32 b = 26;
  int32 base64Values = 27;
  int32 baseAddress = 28;
  int32 BaseType = 29;
  int32 begin = 30;
  int32 binary = 31;
  int32 BinaryDecoder = 32;
  int32 BinaryDecodingError = 33;
  int32 BinaryDecodingOptions = 34;
  int32 BinaryDelimited = 35;
  int32 BinaryEncoder = 36;
  int32 BinaryEncodingError = 37;
  int32 BinaryEncodingMessageSetSizeVisitor = 38;
  int32 BinaryEncodingMessageSetVisitor = 39;
  int32 BinaryEncodingSizeVisitor = 40;
  int32 BinaryEncodingVisitor = 41;
  int32 binaryOptions = 42;
  int32 bitPattern = 43;
  int32 body = 44;
  int32 Bool = 45;
  int32 booleanLiteral = 46;
  int32 BooleanLiteralType = 47;
  int32 boolValue = 48;
  int32 bytes = 49;
  int32 bytesInGroup = 50;
  int32 bytesNeeded = 51;
  int32 bytesRead = 52;
  int32 BytesValue = 53;
  int32 c = 54;
  int32 capitalizeNext = 55;
  int32 cardinality = 56;
  int32 CaseIterable = 57;
  int32 ccEnableArenas = 58;
  int32 ccGenericServices = 59;
  int32 Character = 60;
  int32 chars = 61;
  int32 chunk = 62;
  int32 class = 63;
  int32 clearAggregateValue = 64;
  int32 clearAllowAlias = 65;
  int32 clearBegin = 66;
  int32 clearCcEnableArenas = 67;
  int32 clearCcGenericServices = 68;
  int32 clearClientStreaming = 69;
  int32 clearCsharpNamespace = 70;
  int32 clearCtype = 71;
  int32 clearDebugRedact = 72;
  int32 clearDefaultValue = 73;
  int32 clearDeprecated = 74;
  int32 clearDeprecatedLegacyJsonFieldConflicts = 75;
  int32 clearDoubleValue = 76;
  int32 clearEdition = 77;
  int32 clearEnd = 78;
  int32 clearExtendee = 79;
  int32 clearExtensionValue = 80;
  int32 clearFullName = 81;
  int32 clearGoPackage = 82;
  int32 clearIdempotencyLevel = 83;
  int32 clearIdentifierValue = 84;
  int32 clearInputType = 85;
  int32 clearIsExtension = 86;
  int32 clearIsRepeated = 87;
  int32 clearJavaGenerateEqualsAndHash = 88;
  int32 clearJavaGenericServices = 89;
  int32 clearJavaMultipleFiles = 90;
  int32 clearJavaOuterClassname = 91;
  int32 clearJavaPackage = 92;
  int32 clearJavaStringCheckUtf8 = 93;
  int32 clearJsonName = 94;
  int32 clearJstype = 95;
  int32 clearLabel = 96;
  int32 clearLazy = 97;
  int32 clearLeadingComments = 98;
  int32 clearMapEntry = 99;
  int32 clearMessageSetWireFormat = 100;
  int32 clearName = 101;
  int32 clearNamePart = 102;
  int32 clearNegativeIntValue = 103;
  int32 clearNoStandardDescriptorAccessor = 104;
  int32 clearNumber = 105;
  int32 clearObjcClassPrefix = 106;
  int32 clearOneofIndex = 107;
  int32 clearOptimizeFor = 108;
  int32 clearOptions = 109;
  int32 clearOutputType = 110;
  int32 clearPackage = 111;
  int32 clearPacked = 112;
  int32 clearPhpClassPrefix = 113;
  int32 clearPhpGenericServices = 114;
  int32 clearPhpMetadataNamespace = 115;
  int32 clearPhpNamespace = 116;
  int32 clearPositiveIntValue = 117;
  int32 clearProto3Optional = 118;
  int32 clearPyGenericServices = 119;
  int32 clearRepeated = 120;
  int32 clearReserved = 121;
  int32 clearRetention = 122;
  int32 clearRubyPackage = 123;
  int32 clearSemantic = 124;
  int32 clearServerStreaming = 125;
  int32 clearSourceCodeInfo = 126;
  int32 clearSourceContext = 127;
  int32 clearSourceFile = 128;
  int32 clearStart = 129;
  int32 clearStringValue = 130;
  int32 clearSwiftPrefix = 131;
  int32 clearSyntax = 132;
  int32 clearTargetObsoleteDoNotUse = 133;
  int32 clearTrailingComments = 134;
  int32 clearType = 135;
  int32 clearTypeName = 136;
  int32 clearUnverifiedLazy = 137;
  int32 clearValue = 138;
  int32 clearVerification = 139;
  int32 clearWeak = 140;
  int32 clientStreaming = 141;
  int32 codePoint = 142;
  int32 codeUnits = 143;
  int32 Collection = 144;
  int32 com = 145;
  int32 comma = 146;
  int32 contentsOf = 147;
  int32 count = 148;
  int32 countVarintsInBuffer = 149;
  int32 csharpNamespace = 150;
  int32 ctype = 151;
  int32 customCodable = 152;
  int32 CustomDebugStringConvertible = 153;
  int32 d = 154;
  int32 Data = 155;
  int32 dataResult = 156;
  int32 date = 157;
  int32 daySec = 158;
  int32 daysSinceEpoch = 159;
  int32 debugDescription = 160;
  int32 debugRedact = 161;
  int32 declaration = 162;
  int32 decoded = 163;
  int32 decodedFromJSONNull = 164;
  int32 decodeExtensionField = 165;
  int32 decodeExtensionFieldsAsMessageSet = 166;
  int32 decodeJSON = 167;
  int32 decodeMapField = 168;
  int32 decodeMessage = 169;
  int32 decoder = 170;
  int32 decodeRepeated = 171;
  int32 decodeRepeatedBoolField = 172;
  int32 decodeRepeatedBytesField = 173;
  int32 decodeRepeatedDoubleField = 174;
  int32 decodeRepeatedEnumField = 175;
  int32 decodeRepeatedFixed32Field = 176;
  int32 decodeRepeatedFixed64Field = 177;
  int32 decodeRepeatedFloatField = 178;
  int32 decodeRepeatedGroupField = 179;
  int32 decodeRepeatedInt32Field = 180;
  int32 decodeRepeatedInt64Field = 181;
  int32 decodeRepeatedMessageField = 182;
  int32 decodeRepeatedSFixed32Field = 183;
  int32 decodeRepeatedSFixed64Field = 184;
  int32 decodeRepeatedSInt32Field = 185;
  int32 decodeRepeatedSInt64Field = 186;
  int32 decodeRepeatedStringField = 187;
  int32 decodeRepeatedUInt32Field = 188;
  int32 decodeRepeatedUInt64Field = 189;
  int32 decodeSingular = 190;
  int32 decodeSingularBoolField = 191;
  int32 decodeSingularBytesField = 192;
  int32 decodeSingularDoubleField = 193;
  int32 decodeSingularEnumField = 194;
  int32 decodeSingularFixed32Field = 195;
  int32 decodeSingularFixed64Field = 196;
  int32 decodeSingularFloatField = 197;
  int32 decodeSingularGroupField = 198;
  int32 decodeSingularInt32Field = 199;
  int32 decodeSingularInt64Field = 200;
  int32 decodeSingularMessageField = 201;
  int32 decodeSingularSFixed32Field = 202;
  int32 decodeSingularSFixed64Field = 203;
  int32 decodeSingularSInt32Field = 204;
  int32 decodeSingularSInt64Field = 205;
  int32 decodeSingularStringField = 206;
  int32 decodeSingularUInt32Field = 207;
  int32 decodeSingularUInt64Field = 208;
  int32 decodeTextFormat = 209;
  int32 defaultAnyTypeURLPrefix = 210;
  int32 defaultValue = 211;
  int32 dependency = 212;
  int32 deprecated = 213;
  int32 deprecatedLegacyJsonFieldConflicts = 214;
  int32 description = 215;
  int32 DescriptorProto = 216;
  int32 Dictionary = 217;
  int32 dictionaryLiteral = 218;
  int32 digit = 219;
  int32 digit0 = 220;
  int32 digit1 = 221;
  int32 digitCount = 222;
  int32 digits = 223;
  int32 digitValue = 224;
  int32 discardableResult = 225;
  int32 discardUnknownFields = 226;
  int32 distance = 227;
  int32 double = 228;
  int32 doubleValue = 229;
  int32 Duration = 230;
  int32 E = 231;
  int32 edition = 232;
  int32 Element = 233;
  int32 elements = 234;
  int32 emitExtensionFieldName = 235;
  int32 emitFieldName = 236;
  int32 emitFieldNumber = 237;
  int32 Empty = 238;
  int32 emptyData = 239;
  int32 encodeAsBytes = 240;
  int32 encoded = 241;
  int32 encodedJSONString = 242;
  int32 encodedSize = 243;
  int32 encodeField = 244;
  int32 encoder = 245;
  int32 end = 246;
  int32 endArray = 247;
  int32 endMessageField = 248;
  int32 endObject = 249;
  int32 endRegularField = 250;
  int32 enum = 251;
  int32 EnumDescriptorProto = 252;
  int32 EnumOptions = 253;
  int32 EnumReservedRange = 254;
  int32 enumType = 255;
  int32 enumvalue = 256;
  int32 EnumValueDescriptorProto = 257;
  int32 EnumValueOptions = 258;
  int32 Equatable = 259;
  int32 Error = 260;
  int32 ExpressibleByArrayLiteral = 261;
  int32 ExpressibleByDictionaryLiteral = 262;
  int32 ext = 263;
  int32 extDecoder = 264;
  int32 extendedGraphemeClusterLiteral = 265;
  int32 ExtendedGraphemeClusterLiteralType = 266;
  int32 extendee = 267;
  int32 ExtensibleMessage = 268;
  int32 extension = 269;
  int32 ExtensionField = 270;
  int32 extensionFieldNumber = 271;
  int32 ExtensionFieldValueSet = 272;
  int32 ExtensionMap = 273;
  int32 extensionRange = 274;
  int32 ExtensionRangeOptions = 275;
  int32 extensions = 276;
  int32 extras = 277;
  int32 F = 278;
  int32 false = 279;
  int32 field = 280;
  int32 fieldData = 281;
  int32 FieldDescriptorProto = 282;
  int32 FieldMask = 283;
  int32 fieldName = 284;
  int32 fieldNameCount = 285;
  int32 fieldNum = 286;
  int32 fieldNumber = 287;
  int32 fieldNumberForProto = 288;
  int32 FieldOptions = 289;
  int32 fields = 290;
  int32 fieldSize = 291;
  int32 FieldTag = 292;
  int32 fieldType = 293;
  int32 file = 294;
  int32 FileDescriptorProto = 295;
  int32 FileDescriptorSet = 296;
  int32 fileName = 297;
  int32 FileOptions = 298;
  int32 filter = 299;
  int32 first = 300;
  int32 firstItem = 301;
  int32 float = 302;
  int32 floatLiteral = 303;
  int32 FloatLiteralType = 304;
  int32 FloatValue = 305;
  int32 forMessageName = 306;
  int32 formUnion = 307;
  int32 forReadingFrom = 308;
  int32 forTypeURL = 309;
  int32 ForwardParser = 310;
  int32 forWritingInto = 311;
  int32 from = 312;
  int32 fromAscii2 = 313;
  int32 fromAscii4 = 314;
  int32 fromByteOffset = 315;
  int32 fromHexDigit = 316;
  int32 fullName = 317;
  int32 func = 318;
  int32 G = 319;
  int32 GeneratedCodeInfo = 320;
  int32 get = 321;
  int32 getExtensionValue = 322;
  int32 googleapis = 323;
  int32 Google_Protobuf_Any = 324;
  int32 Google_Protobuf_Api = 325;
  int32 Google_Protobuf_BoolValue = 326;
  int32 Google_Protobuf_BytesValue = 327;
  int32 Google_Protobuf_DescriptorProto = 328;
  int32 Google_Protobuf_DoubleValue = 329;
  int32 Google_Protobuf_Duration = 330;
  int32 Google_Protobuf_Empty = 331;
  int32 Google_Protobuf_Enum = 332;
  int32 Google_Protobuf_EnumDescriptorProto = 333;
  int32 Google_Protobuf_EnumOptions = 334;
  int32 Google_Protobuf_EnumValue = 335;
  int32 Google_Protobuf_EnumValueDescriptorProto = 336;
  int32 Google_Protobuf_EnumValueOptions = 337;
  int32 Google_Protobuf_ExtensionRangeOptions = 338;
  int32 Google_Protobuf_Field = 339;
  int32 Google_Protobuf_FieldDescriptorProto = 340;
  int32 Google_Protobuf_FieldMask = 341;
  int32 Google_Protobuf_FieldOptions = 342;
  int32 Google_Protobuf_FileDescriptorProto = 343;
  int32 Google_Protobuf_FileDescriptorSet = 344;
  int32 Google_Protobuf_FileOptions = 345;
  int32 Google_Protobuf_FloatValue = 346;
  int32 Google_Protobuf_GeneratedCodeInfo = 347;
  int32 Google_Protobuf_Int32Value = 348;
  int32 Google_Protobuf_Int64Value = 349;
  int32 Google_Protobuf_ListValue = 350;
  int32 Google_Protobuf_MessageOptions = 351;
  int32 Google_Protobuf_Method = 352;
  int32 Google_Protobuf_MethodDescriptorProto = 353;
  int32 Google_Protobuf_MethodOptions = 354;
  int32 Google_Protobuf_Mixin = 355;
  int32 Google_Protobuf_NullValue = 356;
  int32 Google_Protobuf_OneofDescriptorProto = 357;
  int32 Google_Protobuf_OneofOptions = 358;
  int32 Google_Protobuf_Option = 359;
  int32 Google_Protobuf_ServiceDescriptorProto = 360;
  int32 Google_Protobuf_ServiceOptions = 361;
  int32 Google_Protobuf_SourceCodeInfo = 362;
  int32 Google_Protobuf_SourceContext = 363;
  int32 Google_Protobuf_StringValue = 364;
  int32 Google_Protobuf_Struct = 365;
  int32 Google_Protobuf_Syntax = 366;
  int32 Google_Protobuf_Timestamp = 367;
  int32 Google_Protobuf_Type = 368;
  int32 Google_Protobuf_UInt32Value = 369;
  int32 Google_Protobuf_UInt64Value = 370;
  int32 Google_Protobuf_UninterpretedOption = 371;
  int32 Google_Protobuf_Value = 372;
  int32 goPackage = 373;
  int32 group = 374;
  int32 groupFieldNumberStack = 375;
  int32 groupSize = 376;
  int32 hadOneofValue = 377;
  int32 handleConflictingOneOf = 378;
  int32 hasAggregateValue = 379;
  int32 hasAllowAlias = 380;
  int32 hasBegin = 381;
  int32 hasCcEnableArenas = 382;
  int32 hasCcGenericServices = 383;
  int32 hasClientStreaming = 384;
  int32 hasCsharpNamespace = 385;
  int32 hasCtype = 386;
  int32 hasDebugRedact = 387;
  int32 hasDefaultValue = 388;
  int32 hasDeprecated = 389;
  int32 hasDeprecatedLegacyJsonFieldConflicts = 390;
  int32 hasDoubleValue = 391;
  int32 hasEdition = 392;
  int32 hasEnd = 393;
  int32 hasExtendee = 394;
  int32 hasExtensionValue = 395;
  int32 hasFullName = 396;
  int32 hasGoPackage = 397;
  int32 hash = 398;
  int32 Hashable = 399;
  int32 hasher = 400;
  int32 HashVisitor = 401;
  int32 hasIdempotencyLevel = 402;
  int32 hasIdentifierValue = 403;
  int32 hasInputType = 404;
  int32 hasIsExtension = 405;
  int32 hasIsRepeated = 406;
  int32 hasJavaGenerateEqualsAndHash = 407;
  int32 hasJavaGenericServices = 408;
  int32 hasJavaMultipleFiles = 409;
  int32 hasJavaOuterClassname = 410;
  int32 hasJavaPackage = 411;
  int32 hasJavaStringCheckUtf8 = 412;
  int32 hasJsonName = 413;
  int32 hasJstype = 414;
  int32 hasLabel = 415;
  int32 hasLazy = 416;
  int32 hasLeadingComments = 417;
  int32 hasMapEntry = 418;
  int32 hasMessageSetWireFormat = 419;
  int32 hasName = 420;
  int32 hasNamePart = 421;
  int32 hasNegativeIntValue = 422;
  int32 hasNoStandardDescriptorAccessor = 423;
  int32 hasNumber = 424;
  int32 hasObjcClassPrefix = 425;
  int32 hasOneofIndex = 426;
  int32 hasOptimizeFor = 427;
  int32 hasOptions = 428;
  int32 hasOutputType = 429;
  int32 hasPackage = 430;
  int32 hasPacked = 431;
  int32 hasPhpClassPrefix = 432;
  int32 hasPhpGenericServices = 433;
  int32 hasPhpMetadataNamespace = 434;
  int32 hasPhpNamespace = 435;
  int32 hasPositiveIntValue = 436;
  int32 hasProto3Optional = 437;
  int32 hasPyGenericServices = 438;
  int32 hasRepeated = 439;
  int32 hasReserved = 440;
  int32 hasRetention = 441;
  int32 hasRubyPackage = 442;
  int32 hasSemantic = 443;
  int32 hasServerStreaming = 444;
  int32 hasSourceCodeInfo = 445;
  int32 hasSourceContext = 446;
  int32 hasSourceFile = 447;
  int32 hasStart = 448;
  int32 hasStringValue = 449;
  int32 hasSwiftPrefix = 450;
  int32 hasSyntax = 451;
  int32 hasTargetObsoleteDoNotUse = 452;
  int32 hasTrailingComments = 453;
  int32 hasType = 454;
  int32 hasTypeName = 455;
  int32 hasUnverifiedLazy = 456;
  int32 hasValue = 457;
  int32 hasVerification = 458;
  int32 hasWeak = 459;
  int32 hour = 460;
  int32 i = 461;
  int32 idempotencyLevel = 462;
  int32 identifierValue = 463;
  int32 if = 464;
  int32 ignoreUnknownFields = 465;
  int32 index = 466;
  int32 init = 467;
  int32 inout = 468;
  int32 inputType = 469;
  int32 insert = 470;
  int32 Int = 471;
  int32 Int32 = 472;
  int32 Int32Value = 473;
  int32 Int64 = 474;
  int32 Int64Value = 475;
  int32 Int8 = 476;
  int32 integerLiteral = 477;
  int32 IntegerLiteralType = 478;
  int32 intern = 479;
  int32 Internal = 480;
  int32 InternalState = 481;
  int32 into = 482;
  int32 ints = 483;
  int32 isA = 484;
  int32 isEqual = 485;
  int32 isEqualTo = 486;
  int32 isExtension = 487;
  int32 isInitialized = 488;
  int32 isNegative = 489;
  int32 isRepeated = 490;
  int32 itemTagsEncodedSize = 491;
  int32 Iterator = 492;
  int32 javaGenerateEqualsAndHash = 493;
  int32 javaGenericServices = 494;
  int32 javaMultipleFiles = 495;
  int32 javaOuterClassname = 496;
  int32 javaPackage = 497;
  int32 javaStringCheckUtf8 = 498;
  int32 JSONDecoder = 499;
  int32 JSONDecodingError = 500;
  int32 JSONDecodingOptions = 501;
  int32 jsonEncoder = 502;
  int32 JSONEncodingError = 503;
  int32 JSONEncodingOptions = 504;
  int32 JSONEncodingVisitor = 505;
  int32 JSONMapEncodingVisitor = 506;
  int32 jsonName = 507;
  int32 jsonPath = 508;
  int32 jsonPaths = 509;
  int32 JSONScanner = 510;
  int32 jsonString = 511;
  int32 jsonText = 512;
  int32 jsonUTF8Bytes = 513;
  int32 jsonUTF8Data = 514;
  int32 jstype = 515;
  int32 k = 516;
  int32 kChunkSize = 517;
  int32 Key = 518;
  int32 keyField = 519;
  int32 keyFieldOpt = 520;
  int32 KeyType = 521;
  int32 kind = 522;
  int32 l = 523;
  int32 label = 524;
  int32 lazy = 525;
  int32 leadingComments = 526;
  int32 leadingDetachedComments = 527;
  int32 length = 528;
  int32 lessThan = 529;
  int32 let = 530;
  int32 lhs = 531;
  int32 list = 532;
  int32 listOfMessages = 533;
  int32 listValue = 534;
  int32 littleEndian = 535;
  int32 littleEndianBytes = 536;
  int32 load = 537;
  int32 localHasher = 538;
  int32 location = 539;
  int32 M = 540;
  int32 major = 541;
  int32 makeIterator = 542;
  int32 mapEntry = 543;
  int32 MapKeyType = 544;
  int32 mapToMessages = 545;
  int32 MapValueType = 546;
  int32 mapVisitor = 547;
  int32 mdayStart = 548;
  int32 merge = 549;
  int32 message = 550;
  int32 MessageBase = 551;
  int32 messageDepthLimit = 552;
  int32 MessageExtension = 553;
  int32 MessageImplementationBase = 554;
  int32 MessageOptions = 555;
  int32 MessageSet = 556;
  int32 messageSetWireFormat = 557;
  int32 messageType = 558;
  int32 Method = 559;
  int32 MethodDescriptorProto = 560;
  int32 MethodOptions = 561;
  int32 methods = 562;
  int32 min = 563;
  int32 minor = 564;
  int32 Mixin = 565;
  int32 mixins = 566;
  int32 modifier = 567;
  int32 modify = 568;
  int32 month = 569;
  int32 msgExtension = 570;
  int32 mutating = 571;
  int32 n = 572;
  int32 name = 573;
  int32 NameDescription = 574;
  int32 NameMap = 575;
  int32 NamePart = 576;
  int32 names = 577;
  int32 nanos = 578;
  int32 nativeEndianBytes = 579;
  int32 negativeIntValue = 580;
  int32 nestedType = 581;
  int32 newL = 582;
  int32 newList = 583;
  int32 newValue = 584;
  int32 nextByte = 585;
  int32 nextFieldNumber = 586;
  int32 nil = 587;
  int32 nilLiteral = 588;
  int32 noStandardDescriptorAccessor = 589;
  int32 nullValue = 590;
  int32 number = 591;
  int32 numberValue = 592;
  int32 objcClassPrefix = 593;
  int32 of = 594;
  int32 oneofDecl = 595;
  int32 OneofDescriptorProto = 596;
  int32 oneofIndex = 597;
  int32 OneofOptions = 598;
  int32 oneofs = 599;
  int32 OneOf_Kind = 600;
  int32 optimizeFor = 601;
  int32 OptimizeMode = 602;
  int32 Option = 603;
  int32 OptionalEnumExtensionField = 604;
  int32 OptionalExtensionField = 605;
  int32 OptionalGroupExtensionField = 606;
  int32 OptionalMessageExtensionField = 607;
  int32 OptionRetention = 608;
  int32 options = 609;
  int32 OptionTargetType = 610;
  int32 other = 611;
  int32 others = 612;
  int32 out = 613;
  int32 outputType = 614;
  int32 p = 615;
  int32 package = 616;
  int32 packed = 617;
  int32 PackedEnumExtensionField = 618;
  int32 PackedExtensionField = 619;
  int32 padding = 620;
  int32 parent = 621;
  int32 parse = 622;
  int32 partial = 623;
  int32 path = 624;
  int32 paths = 625;
  int32 payload = 626;
  int32 payloadSize = 627;
  int32 phpClassPrefix = 628;
  int32 phpGenericServices = 629;
  int32 phpMetadataNamespace = 630;
  int32 phpNamespace = 631;
  int32 pointer = 632;
  int32 pos = 633;
  int32 positiveIntValue = 634;
  int32 prefix = 635;
  int32 preserveProtoFieldNames = 636;
  int32 preTraverse = 637;
  int32 printUnknownFields = 638;
  int32 proto2 = 639;
  int32 proto3DefaultValue = 640;
  int32 proto3Optional = 641;
  int32 ProtobufAPIVersionCheck = 642;
  int32 ProtobufAPIVersion_3 = 643;
  int32 ProtobufBool = 644;
  int32 ProtobufBytes = 645;
  int32 ProtobufDouble = 646;
  int32 ProtobufEnumMap = 647;
  int32 protobufExtension = 648;
  int32 ProtobufFixed32 = 649;
  int32 ProtobufFixed64 = 650;
  int32 ProtobufFloat = 651;
  int32 ProtobufInt32 = 652;
  int32 ProtobufInt64 = 653;
  int32 ProtobufMap = 654;
  int32 ProtobufMessageMap = 655;
  int32 ProtobufSFixed32 = 656;
  int32 ProtobufSFixed64 = 657;
  int32 ProtobufSInt32 = 658;
  int32 ProtobufSInt64 = 659;
  int32 ProtobufString = 660;
  int32 ProtobufUInt32 = 661;
  int32 ProtobufUInt64 = 662;
  int32 protobuf_extensionFieldValues = 663;
  int32 protobuf_fieldNumber = 664;
  int32 protobuf_generated_isEqualTo = 665;
  int32 protobuf_nameMap = 666;
  int32 protobuf_newField = 667;
  int32 protobuf_package = 668;
  int32 protocol = 669;
  int32 protoFieldName = 670;
  int32 protoMessageName = 671;
  int32 ProtoNameProviding = 672;
  int32 protoPaths = 673;
  int32 ProtoSendable = 674;
  int32 public = 675;
  int32 publicDependency = 676;
  int32 putBoolValue = 677;
  int32 putBytesValue = 678;
  int32 putDoubleValue = 679;
  int32 putEnumValue = 680;
  int32 putFixedUInt32 = 681;
  int32 putFixedUInt64 = 682;
  int32 putFloatValue = 683;
  int32 putInt64 = 684;
  int32 putStringValue = 685;
  int32 putUInt64 = 686;
  int32 putUInt64Hex = 687;
  int32 putVarInt = 688;
  int32 putZigZagVarInt = 689;
  int32 pyGenericServices = 690;
  int32 R = 691;
  int32 rawChars = 692;
  int32 RawRepresentable = 693;
  int32 RawValue = 694;
  int32 read4HexDigits = 695;
  int32 register = 696;
  int32 repeated = 697;
  int32 RepeatedEnumExtensionField = 698;
  int32 RepeatedExtensionField = 699;
  int32 RepeatedGroupExtensionField = 700;
  int32 RepeatedMessageExtensionField = 701;
  int32 repeating = 702;
  int32 requestStreaming = 703;
  int32 requestTypeURL = 704;
  int32 requiredSize = 705;
  int32 responseStreaming = 706;
  int32 responseTypeURL = 707;
  int32 result = 708;
  int32 retention = 709;
  int32 rethrows = 710;
  int32 return = 711;
  int32 ReturnType = 712;
  int32 revision = 713;
  int32 rhs = 714;
  int32 root = 715;
  int32 rubyPackage = 716;
  int32 s = 717;
  int32 sawBackslash = 718;
  int32 sawSection4Characters = 719;
  int32 sawSection5Characters = 720;
  int32 scanner = 721;
  int32 seconds = 722;
  int32 self = 723;
  int32 semantic = 724;
  int32 Sendable = 725;
  int32 separator = 726;
  int32 serialize = 727;
  int32 serializedBytes = 728;
  int32 serializedData = 729;
  int32 serializedSize = 730;
  int32 serverStreaming = 731;
  int32 service = 732;
  int32 ServiceDescriptorProto = 733;
  int32 ServiceOptions = 734;
  int32 set = 735;
  int32 setExtensionValue = 736;
  int32 shift = 737;
  int32 SimpleExtensionMap = 738;
  int32 sizer = 739;
  int32 source = 740;
  int32 sourceCodeInfo = 741;
  int32 sourceContext = 742;
  int32 sourceEncoding = 743;
  int32 sourceFile = 744;
  int32 span = 745;
  int32 split = 746;
  int32 start = 747;
  int32 startArray = 748;
  int32 startArrayObject = 749;
  int32 startField = 750;
  int32 startIndex = 751;
  int32 startMessageField = 752;
  int32 startObject = 753;
  int32 startRegularField = 754;
  int32 state = 755;
  int32 static = 756;
  int32 StaticString = 757;
  int32 storage = 758;
  int32 String = 759;
  int32 stringLiteral = 760;
  int32 StringLiteralType = 761;
  int32 stringResult = 762;
  int32 stringValue = 763;
  int32 struct = 764;
  int32 structValue = 765;
  int32 subDecoder = 766;
  int32 subscript = 767;
  int32 subVisitor = 768;
  int32 Swift = 769;
  int32 swiftPrefix = 770;
  int32 SwiftProtobufContiguousBytes = 771;
  int32 syntax = 772;
  int32 T = 773;
  int32 tag = 774;
  int32 targetObsoleteDoNotUse = 775;
  int32 targets = 776;
  int32 terminator = 777;
  int32 testDecoder = 778;
  int32 text = 779;
  int32 textDecoder = 780;
  int32 TextFormatDecoder = 781;
  int32 TextFormatDecodingError = 782;
  int32 TextFormatDecodingOptions = 783;
  int32 TextFormatEncodingOptions = 784;
  int32 TextFormatEncodingVisitor = 785;
  int32 textFormatString = 786;
  int32 throwOrIgnore = 787;
  int32 throws = 788;
  int32 timeInterval = 789;
  int32 timeIntervalSince1970 = 790;
  int32 timeIntervalSinceReferenceDate = 791;
  int32 Timestamp = 792;
  int32 total = 793;
  int32 totalArrayDepth = 794;
  int32 totalSize = 795;
  int32 trailingComments = 796;
  int32 traverse = 797;
  int32 true = 798;
  int32 try = 799;
  int32 type = 800;
  int32 typealias = 801;
  int32 TypeEnum = 802;
  int32 typeName = 803;
  int32 typePrefix = 804;
  int32 typeStart = 805;
  int32 typeUnknown = 806;
  int32 typeURL = 807;
  int32 UInt32 = 808;
  int32 UInt32Value = 809;
  int32 UInt64 = 810;
  int32 UInt64Value = 811;
  int32 UInt8 = 812;
  int32 unicodeScalarLiteral = 813;
  int32 UnicodeScalarLiteralType = 814;
  int32 unicodeScalars = 815;
  int32 UnicodeScalarView = 816;
  int32 uninterpretedOption = 817;
  int32 union = 818;
  int32 uniqueStorage = 819;
  int32 unknown = 820;
  int32 unknownFields = 821;
  int32 UnknownStorage = 822;
  int32 unpackTo = 823;
  int32 UnsafeBufferPointer = 824;
  int32 UnsafeMutablePointer = 825;
  int32 UnsafeMutableRawBufferPointer = 826;
  int32 UnsafeMutableRawPointer = 827;
  int32 UnsafeRawBufferPointer = 828;
  int32 UnsafeRawPointer = 829;
  int32 unverifiedLazy = 830;
  int32 updatedOptions = 831;
  int32 url = 832;
  int32 utf8 = 833;
  int32 utf8Ptr = 834;
  int32 utf8ToDouble = 835;
  int32 UTF8View = 836;
  int32 v = 837;
  int32 value = 838;
  int32 valueField = 839;
  int32 values = 840;
  int32 ValueType = 841;
  int32 var = 842;
  int32 verification = 843;
  int32 VerificationState = 844;
  int32 Version = 845;
  int32 versionString = 846;
  int32 visitExtensionFields = 847;
  int32 visitExtensionFieldsAsMessageSet = 848;
  int32 visitMapField = 849;
  int32 visitor = 850;
  int32 visitPacked = 851;
  int32 visitPackedBoolField = 852;
  int32 visitPackedDoubleField = 853;
  int32 visitPackedEnumField = 854;
  int32 visitPackedFixed32Field = 855;
  int32 visitPackedFixed64Field = 856;
  int32 visitPackedFloatField = 857;
  int32 visitPackedInt32Field = 858;
  int32 visitPackedInt64Field = 859;
  int32 visitPackedSFixed32Field = 860;
  int32 visitPackedSFixed64Field = 861;
  int32 visitPackedSInt32Field = 862;
  int32 visitPackedSInt64Field = 863;
  int32 visitPackedUInt32Field = 864;
  int32 visitPackedUInt64Field = 865;
  int32 visitRepeated = 866;
  int32 visitRepeatedBoolField = 867;
  int32 visitRepeatedBytesField = 868;
  int32 visitRepeatedDoubleField = 869;
  int32 visitRepeatedEnumField = 870;
  int32 visitRepeatedFixed32Field = 871;
  int32 visitRepeatedFixed64Field = 872;
  int32 visitRepeatedFloatField = 873;
  int32 visitRepeatedGroupField = 874;
  int32 visitRepeatedInt32Field = 875;
  int32 visitRepeatedInt64Field = 876;
  int32 visitRepeatedMessageField = 877;
  int32 visitRepeatedSFixed32Field = 878;
  int32 visitRepeatedSFixed64Field = 879;
  int32 visitRepeatedSInt32Field = 880;
  int32 visitRepeatedSInt64Field = 881;
  int32 visitRepeatedStringField = 882;
  int32 visitRepeatedUInt32Field = 883;
  int32 visitRepeatedUInt64Field = 884;
  int32 visitSingular = 885;
  int32 visitSingularBoolField = 886;
  int32 visitSingularBytesField = 887;
  int32 visitSingularDoubleField = 888;
  int32 visitSingularEnumField = 889;
  int32 visitSingularFixed32Field = 890;
  int32 visitSingularFixed64Field = 891;
  int32 visitSingularFloatField = 892;
  int32 visitSingularGroupField = 893;
  int32 visitSingularInt32Field = 894;
  int32 visitSingularInt64Field = 895;
  int32 visitSingularMessageField = 896;
  int32 visitSingularSFixed32Field = 897;
  int32 visitSingularSFixed64Field = 898;
  int32 visitSingularSInt32Field = 899;
  int32 visitSingularSInt64Field = 900;
  int32 visitSingularStringField = 901;
  int32 visitSingularUInt32Field = 902;
  int32 visitSingularUInt64Field = 903;
  int32 visitUnknown = 904;
  int32 wasDecoded = 905;
  int32 weak = 906;
  int32 weakDependency = 907;
  int32 where = 908;
  int32 wireFormat = 909;
  int32 with = 910;
  int32 withUnsafeBytes = 911;
  int32 withUnsafeMutableBytes = 912;
  int32 work = 913;
  int32 WrappedType = 914;
  int32 written = 915;
  int32 yday = 916;
}
